Fixed overflowing of charts on mobile.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1139,9 +1139,8 @@ body {
   .pageWrapper .chart-wrapper {
     border-bottom: 1px solid #F22F46; }
   .pageWrapper .intro-data-chart .apexcharts-legend, .pageWrapper .chart-wrapper .apexcharts-legend, .pageWrapper .stackedBarChart .apexcharts-legend {
-    padding-left: 98px; }
-    .pageWrapper .intro-data-chart .apexcharts-legend-series, .pageWrapper .chart-wrapper .apexcharts-legend-series, .pageWrapper .stackedBarChart .apexcharts-legend-series {
-      margin-top: 20px !important; }
+    padding-left: 98px;
+    transform: translate(0, 20px) !important; }
   .pageWrapper .stackedBarChart .apexcharts-legend {
     padding-left: 0; }
   .pageWrapper .chart-wrapper > div:first-child {
