--- a/assets/scss/utilities/_charts.scss
+++ b/assets/scss/utilities/_charts.scss
@@ -76,9 +76,7 @@
 .intro-data-chart, .chart-wrapper, .stackedBarChart {
 	.apexcharts-legend {
 		padding-left:98px;
-		&-series {
-			margin-top:20px !important;
-		}
+		transform:translate(0,20px) !important;
 	}
 }
 
@@ -132,8 +130,3 @@
 	}
 }
 
-@media screen and (max-width:540px) {
-	.chart-placeholder[data-chart-type="radial-bar"] {
-		//transform:translate(0, -50%) scale(.5) !important;
-	}
-}
